[package]
authors = ["Scott Mabin <MabezDev@gmail.com>"]
edition = "2018"
name = "mwatch-sdk"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.3"
cortex-m-semihosting = "0.3.1"
panic-semihosting = "0.5.0"
mwatch-sdk-core = { path = "../../projects/mabez-watch-sdk-core" }
embedded-graphics = "0.4.4"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # optimize for size
