[package]
authors = ["Scott Mabin <MabezDev@gmail.com>"]
edition = "2018"
name = "mwatch-sdk"
version = "0.5.0"
description = "A development SDK for applications on the https://github.com/MWatch"
keywords = ["no-std", "embedded", "mwatch"]
repository = "https://github.com/MWatch/sdk"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
	".travis.yml",
	".gitignore",
]

[dependencies]
mwatch-kernel = { package = "mwatch_kernel", version = "2.0.0" } 
embedded-graphics = "0.7.1"

[dev-dependencies]
heapless = { version = "0.4.1" }

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z" # optimize for size


[features]
default = ["panic-simple"]
panic-log = []
panic-simple = []
